--- a/html/00Index.html
+++ b/html/00Index.html
@@ -11,7 +11,7 @@
 <div style="text-align: center;">
 <a href="../../../doc/html/packages.html"><img class="arrow" src="../../../doc/html/left.jpg" alt="[Up]" /></a>
 <a href="../../../doc/html/index.html"><img class="arrow" src="../../../doc/html/up.jpg" alt="[Top]" /></a>
-</div><h2>Documentation for package &lsquo;CVEK&rsquo; version 0.1-0</h2>
+</div><h2>Documentation for package &lsquo;CVEK&rsquo; version 0.2-0</h2>
 
 <ul><li><a href="../DESCRIPTION">DESCRIPTION file</a>.</li>
 </ul>
@@ -24,20 +24,24 @@
 <td>Estimating Projection Matrices</td></tr>
 <tr><td style="width: 25%;"><a href="dataGenerate.html">dataGenerate</a></td>
 <td>Generating Original Data</td></tr>
+<tr><td style="width: 25%;"><a href="defineModel.html">defineModel</a></td>
+<td>Defining the Model</td></tr>
 <tr><td style="width: 25%;"><a href="ensemble.html">ensemble</a></td>
 <td>Estimating Ensemble Kernel Matrices</td></tr>
+<tr><td style="width: 25%;"><a href="estimation.html">estimation</a></td>
+<td>Conducting Gaussian Process Regression</td></tr>
 <tr><td style="width: 25%;"><a href="genericFormula.html">genericFormula</a></td>
 <td>From Vectors to Single Variables</td></tr>
 <tr><td style="width: 25%;"><a href="infoMat.html">infoMat</a></td>
 <td>Computing Information Matrices</td></tr>
 <tr><td style="width: 25%;"><a href="kernelGenerate.html">kernelGenerate</a></td>
 <td>Generating A Single Kernel</td></tr>
-<tr><td style="width: 25%;"><a href="kernelTest.html">kernelTest</a></td>
-<td>Conducting Score Tests for Interaction</td></tr>
-<tr><td style="width: 25%;"><a href="multiScore.html">multiScore</a></td>
-<td>Computing Score Test Statistics.</td></tr>
 <tr><td style="width: 25%;"><a href="noiseEstimate.html">noiseEstimate</a></td>
 <td>Estimating Noise</td></tr>
+<tr><td style="width: 25%;"><a href="scoreStat.html">scoreStat</a></td>
+<td>Computing Score Test Statistics.</td></tr>
+<tr><td style="width: 25%;"><a href="testing.html">testing</a></td>
+<td>Conducting Score Tests for Interaction</td></tr>
 <tr><td style="width: 25%;"><a href="tuning.html">tuning</a></td>
 <td>Calculating Tuning Parameters</td></tr>
 </table>
