--- a/html/00Index.html
+++ b/html/00Index.html
@@ -20,26 +20,26 @@
 
 
 <table width="100%">
-<tr><td style="width: 25%;"><a href="baseEstimate.html">baseEstimate</a></td>
-<td>Estimating Projection Matrices</td></tr>
-<tr><td style="width: 25%;"><a href="dataGenerate.html">dataGenerate</a></td>
-<td>Generating Original Data</td></tr>
-<tr><td style="width: 25%;"><a href="defineModel.html">defineModel</a></td>
+<tr><td style="width: 25%;"><a href="compute_info.html">compute_info</a></td>
+<td>Computing Information Matrices</td></tr>
+<tr><td style="width: 25%;"><a href="compute_stat.html">compute_stat</a></td>
+<td>Computing Score Test Statistics.</td></tr>
+<tr><td style="width: 25%;"><a href="define_model.html">define_model</a></td>
 <td>Defining the Model</td></tr>
 <tr><td style="width: 25%;"><a href="ensemble.html">ensemble</a></td>
 <td>Estimating Ensemble Kernel Matrices</td></tr>
+<tr><td style="width: 25%;"><a href="estimate_base.html">estimate_base</a></td>
+<td>Estimating Projection Matrices</td></tr>
+<tr><td style="width: 25%;"><a href="estimate_noise.html">estimate_noise</a></td>
+<td>Estimating Noise</td></tr>
 <tr><td style="width: 25%;"><a href="estimation.html">estimation</a></td>
 <td>Conducting Gaussian Process Regression</td></tr>
-<tr><td style="width: 25%;"><a href="genericFormula.html">genericFormula</a></td>
+<tr><td style="width: 25%;"><a href="generate_data.html">generate_data</a></td>
+<td>Generating Original Data</td></tr>
+<tr><td style="width: 25%;"><a href="generate_formula.html">generate_formula</a></td>
 <td>From Vectors to Single Variables</td></tr>
-<tr><td style="width: 25%;"><a href="infoMat.html">infoMat</a></td>
-<td>Computing Information Matrices</td></tr>
-<tr><td style="width: 25%;"><a href="kernelGenerate.html">kernelGenerate</a></td>
+<tr><td style="width: 25%;"><a href="generate_kernel.html">generate_kernel</a></td>
 <td>Generating A Single Kernel</td></tr>
-<tr><td style="width: 25%;"><a href="noiseEstimate.html">noiseEstimate</a></td>
-<td>Estimating Noise</td></tr>
-<tr><td style="width: 25%;"><a href="scoreStat.html">scoreStat</a></td>
-<td>Computing Score Test Statistics.</td></tr>
 <tr><td style="width: 25%;"><a href="testing.html">testing</a></td>
 <td>Conducting Score Tests for Interaction</td></tr>
 <tr><td style="width: 25%;"><a href="tuning.html">tuning</a></td>
