--- a/html/00Index.html
+++ b/html/00Index.html
@@ -28,6 +28,12 @@
 <td>Defining the Model</td></tr>
 <tr><td style="width: 25%;"><a href="ensemble.html">ensemble</a></td>
 <td>Estimating Ensemble Kernel Matrices</td></tr>
+<tr><td style="width: 25%;"><a href="ensemble_avg.html">ensemble_avg</a></td>
+<td>Estimating Ensemble Kernel Matrices Using AVG</td></tr>
+<tr><td style="width: 25%;"><a href="ensemble_erm.html">ensemble_erm</a></td>
+<td>Estimating Ensemble Kernel Matrices Using ERM</td></tr>
+<tr><td style="width: 25%;"><a href="ensemble_exp.html">ensemble_exp</a></td>
+<td>Estimating Ensemble Kernel Matrices Using EXP</td></tr>
 <tr><td style="width: 25%;"><a href="estimate_base.html">estimate_base</a></td>
 <td>Estimating Projection Matrices</td></tr>
 <tr><td style="width: 25%;"><a href="estimate_noise.html">estimate_noise</a></td>
@@ -40,9 +46,35 @@
 <td>From Vectors to Single Variables</td></tr>
 <tr><td style="width: 25%;"><a href="generate_kernel.html">generate_kernel</a></td>
 <td>Generating A Single Kernel</td></tr>
+<tr><td style="width: 25%;"><a href="kernel_intercept.html">kernel_intercept</a></td>
+<td>Generating A Single Point-wise Function Using Intercept</td></tr>
+<tr><td style="width: 25%;"><a href="kernel_linear.html">kernel_linear</a></td>
+<td>Generating A Single Point-wise Function Using Linear</td></tr>
+<tr><td style="width: 25%;"><a href="kernel_matern.html">kernel_matern</a></td>
+<td>Generating A Single Point-wise Function Using Matern</td></tr>
+<tr><td style="width: 25%;"><a href="kernel_nn.html">kernel_nn</a></td>
+<td>Generating A Single Point-wise Function Using Neural Network</td></tr>
+<tr><td style="width: 25%;"><a href="kernel_polynomial.html">kernel_polynomial</a></td>
+<td>Generating A Single Point-wise Function Using Polynomial</td></tr>
+<tr><td style="width: 25%;"><a href="kernel_rational.html">kernel_rational</a></td>
+<td>Generating A Single Point-wise Function Using Rational Quadratic</td></tr>
+<tr><td style="width: 25%;"><a href="kernel_rbf.html">kernel_rbf</a></td>
+<td>Generating A Single Point-wise Function Using RBF</td></tr>
 <tr><td style="width: 25%;"><a href="testing.html">testing</a></td>
 <td>Conducting Score Tests for Interaction</td></tr>
+<tr><td style="width: 25%;"><a href="test_asym.html">test_asym</a></td>
+<td>Conducting Score Tests for Interaction Using Asymptotic Test</td></tr>
+<tr><td style="width: 25%;"><a href="test_boot.html">test_boot</a></td>
+<td>Conducting Score Tests for Interaction Using Bootstrap Test</td></tr>
 <tr><td style="width: 25%;"><a href="tuning.html">tuning</a></td>
 <td>Calculating Tuning Parameters</td></tr>
+<tr><td style="width: 25%;"><a href="tuning_AICc.html">tuning_AICc</a></td>
+<td>Calculating Tuning Parameters Using AICc</td></tr>
+<tr><td style="width: 25%;"><a href="tuning_GCVc.html">tuning_GCVc</a></td>
+<td>Calculating Tuning Parameters Using GCVc</td></tr>
+<tr><td style="width: 25%;"><a href="tuning_gmpml.html">tuning_gmpml</a></td>
+<td>Calculating Tuning Parameters Using GMPML</td></tr>
+<tr><td style="width: 25%;"><a href="tuning_loocv.html">tuning_loocv</a></td>
+<td>Calculating Tuning Parameters Using looCV</td></tr>
 </table>
 </body></html>
